k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops
  labels:
    name: devsecops
    app.kubernetes.io/managed-by: argocd
